--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,15 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="Portfolio.html/css/styles.css">
+    <link rel="stylesheet" href="/Portfolio.html/assets/css/styles.css">
 
 </head>
 
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <div class="container-fluid"></div>
+        <a class="navbar-brand" href="#">Lynn Boudreau</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,23 +26,12 @@
                 <a class="nav-item nav-link active" href="/contact.html">Contact</a>
                 <a class="nav-item nav-link" href="/portfolio.html">Portfolio</a>
                 <a class="nav-item nav-link" href="/index.html">About</a>
-
-
             </div>
+        </div>
         </div>
     </nav>
 
     <h1>CONTACT PAGE</h1>
-
-
-
-
-
-
-
-
-
-
 
 </body>
 
