--- a/contact.html
+++ b/contact.html
@@ -4,97 +4,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contact Page</title>
+    <title>Contact Me</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css" media="screen">
 
 </head>
 
 <body>
-
-    <div id="nav">
-        <div id="nav">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Lynn Boudreau</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class=" navbar-nav ml-auto my-2 my-lg-0">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="./index.html">About <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./portfolio.html">Portfolio</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contact.html" tabindex="-1" aria-disabled="true">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="index.html" id="logo">Lynn Boudreau</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">About</a>
+                    </li>
+                </ul>
+            </div>
         </div>
+    </nav>
 
-        <div id="content">
-            <div class="container">
-                <div class="row mt-5">
-                    <div class="card col-12">
-                        <div class="card-body">
-                            <h5 class="card-title">Contact</h5>
-                            <hr>
-                            <div class="image-section row">
-                                <div class="col-4">
-                                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg"
-                                        alt="" class="col-12">
-                                </div>
-                                <div class="col-8">
-                                    <p>
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, dolores itaque
-                                        mollitia cupiditate
-                                        similique omnis nulla totam inventore odit modi, sunt accusamus, dolore repellat
-                                        earum. Iusto,
-                                        laudantium. In, iste distinctio! Lorem, ipsum dolor sit amet consectetur
-                                        adipisicing elit. Dolor,
-                                        dolores itaque mollitia cupiditate
-                                        similique omnis nulla totam inventore odit modi, sunt accusamus, dolore repellat
-                                        earum. Iusto,
-                                        laudantium. In, iste distinctio!
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="text-section row">
-                                <div class="col-12">
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil dolorum veniam
-                                        architecto quo
-                                        veritatis id modi incidunt velit quia excepturi eveniet tenetur laudantium nobis
-                                        ratione deserunt,
-                                        nulla corrupti? Placeat, porro.</p>
-                                </div>
 
-                            </div>
+    <main class="container">
+        <section class="row">
+            <div class="col-md-8">
+                <form class="block form-horizontal">
+                    <h1 class="block-header">Contact</h1>
+                    <hr />
+                    <div class="form-group">
+                        <label for="name" class="col-sm-2 control-label">Name</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" id="name" placeholder="Name">
                         </div>
                     </div>
-                </div>
+                    <div class="form-group">
+                        <label for="email" class="col-sm-2 control-label">Email</label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control" id="email" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label" for="msg">Message</label>
+                        <div class="col-sm-10">
+                            <textarea id="msg" class="form-control" rows="3" placeholder="Message"></textarea>
+                        </div>
+                    </div>
+                    <button class="submit-btn">Submit</button>
+                </form>
             </div>
-
-
-        </div>
-        <div id="footer">
-            <footer class="blog-footer">
-                <p>Portfolio template built for <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by <a
-                        href="https://twitter.com/LWBoudreau">lynnboudreau.com</a>.</p>
-                <p>
-                    <a href="#">Back to top</a>
-                </p>
-            </footer>
-        </div>
+        </section>
+    </main>
+    <div id="footer">
+        <footer class="blog-footer">
+            <p>Portfolio template built for <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by <a
+                    href="https://twitter.com/LWBoudreau">lynnboudreau.com</a>.</p>
+            <p>
+                <a href="#">Back to top</a>
+            </p>
+        </footer>
+    </div>
 
     </div>
 
