reworked my portfolio please re-grade

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/styles.css" media="screen">>
+    <link rel="stylesheet" href="./assets/css/styles.css" media="screen">
 
 </head>
 
@@ -42,54 +42,62 @@
 
     <div class="container">
         <main class="row">
-            <div class="col-md-8">
+            <div class="col-md-12">
                 <article class="block">
                     <h1 class="block-header">Portfolio</h1>
                     <hr />
-                    <div class="row">
-                        <div class="col-sm-6 col-md-12 col-lg-6">
-                            <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-6 col-md-12 col-lg-6">
+                                <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+                            </div>
+                            <div class="col-sm-6 col-md-12 col-lg-6">
+                                <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+                            </div>
                         </div>
-                        <div class="col-sm-6 col-md-12 col-lg-6">
-                            <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+                        <br />
+                        <div class="row">
+                            <div class="col-sm-6 col-md-12 col-lg-6">
+                                <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+                            </div>
+                            <div class="col-sm-6 col-md-12 col-lg-6">
+                                <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6 col-md-12 col-lg-6">
-                            <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
-                        </div>
-                        <div class="col-sm-6 col-md-12 col-lg-6">
-                            <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6 col-md-12 col-lg-6">
-                            <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+                        <br />
+                        <div class="row">
+                            <div class="col-sm-6 col-md-12 col-lg-6">
+                                <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+                            </div>
+                            <div class="col-sm-6 col-md-12 col-lg-6">
+                                <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+                            </div>
                         </div>
                     </div>
                 </article>
             </div>
         </main>
-        < </div>
-            <div id="footer">
-                <footer class="blog-footer">
-                    <p>Portfolio template built for <a href="https://getbootstrap.com/">UNH Coding Bootcamp</a> by <a
-                            href="https://twitter.com/LWBoudreau">lynnboudreau.com</a>.</p>
-                    <p>
-                        <a href="#">Back to top</a>
-                    </p>
-                </footer>
-            </div>
+    </div>
+    <br />
+    <div id="footer">
+        <footer class="blog-footer">
+            <p>Portfolio template built for <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by
+                <a href="https://twitter.com/LWBoudreau">lynnboudreau.com</a>.</p>
+            <p>
+                <a href="https://lynnboudreau.github.io/Portfolio/">Back to Landing Page</a>
+            </p>
+        </footer>
+    </div>
 
-            <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-                integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-                crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-                crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-                integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-                crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
