--- a/contact.html
+++ b/contact.html
@@ -69,10 +69,10 @@
     </main>
     <div id="footer">
         <footer class="blog-footer">
-            <p>Portfolio template built for <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by <a
-                    href="https://twitter.com/LWBoudreau">lynnboudreau.com</a>.</p>
+            <p>Portfolio template built for <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by
+                <a href="https://twitter.com/LWBoudreau">lynnboudreau.com</a>.</p>
             <p>
-                <a href="#">Back to top</a>
+                <a href="https://lynnboudreau.github.io/Portfolio/">Back to Landing Page</a>
             </p>
         </footer>
     </div>
