--- a/index.html
+++ b/index.html
@@ -15,30 +15,28 @@
 </head>
 
 <body>
-  <div id="nav"></div>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Lynn Boudreau</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class=" navbar-nav ml-auto my-2 my-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="./index.html">About <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./portfolio.html">Portfolio</a>
-        </li>
+    <div class="container">
+      <a class="navbar-brand" href="index.html" id="logo">Lynn Boudreau</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+        </ul>
+      </div>
 
-        <li class="nav-item">
-          <a class="nav-link" href="./contact.html" tabindex="-1" aria-disabled="true">Contact</a>
-        </li>
-      </ul>
-    </div>
   </nav>
-
-  </div>
 
   <div id="content">
     <div class="container">
@@ -81,10 +79,8 @@
   </div>
   <div id="footer">
     <footer class="blog-footer">
-      <p>Portfolio template built for <a href="https://getbootstrap.com/">UNH Coding Bootcamp</a> by <a
+      <p>Portfolio template built for <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by <a
           href="https://twitter.com/LWBoudreau">lynnboudreau.com</a>.</p>
-      <p>
-        <a href="#">Back to top</a>
       </p>
     </footer>
   </div>
