layout changes begin personalization

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <div id="content">
     <div class="container">
-      <div class="row mt-5">
+      <div class="row mt-3">
         <div class="card col-12">
           <div class="card-body">
             <h5 class="card-title">About Me</h5>
@@ -60,22 +60,31 @@
                   similique omnis nulla totam inventore odit modi, sunt accusamus, dolore repellat earum. Iusto,
                   laudantium. In, iste distinctio!
                 </p>
+                <br>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, dolores itaque mollitia cupiditate
+                  similique omnis nulla totam inventore odit modi, sunt accusamus, dolore repellat earum. Iusto,
+                  laudantium. In, iste distinctio! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor,
+                  dolores itaque mollitia cupiditate
+                  similique omnis nulla totam inventore odit modi, sunt accusamus, dolore repellat earum. Iusto,
+                  laudantium. In, iste distinctio!
+                </p>
               </div>
             </div>
+            <br>
             <div class="text-section row">
               <div class="col-12">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil dolorum veniam architecto quo
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil dolorum veniam architecto quo
                   veritatis id modi incidunt velit quia excepturi eveniet tenetur laudantium nobis ratione deserunt,
-                  nulla corrupti? Placeat, porro.</p>
+                  nulla corrupti? Placeat, porro.
+                </p>
               </div>
-
             </div>
           </div>
         </div>
       </div>
     </div>
-
-
   </div>
   <div id="footer">
     <footer class="blog-footer">
