--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contact Me</title>
+    <title>Contact</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -47,13 +47,13 @@
                     <div class="form-group">
                         <label for="name" class="col-sm-2 control-label">Name</label>
                         <div class="col-sm-10">
-                            <input type="email" class="form-control" id="name" placeholder="Name">
+                            <input type="Password" class="form-control" id="name" placeholder="Name">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="email" class="col-sm-2 control-label">Email</label>
                         <div class="col-sm-10">
-                            <input type="password" class="form-control" id="email" placeholder="Email">
+                            <input type="Email" class="form-control" id="Email" placeholder="Email">
                         </div>
                     </div>
                     <div class="form-group">
@@ -67,10 +67,12 @@
             </div>
         </section>
     </main>
+    <br>
     <div id="footer">
         <footer class="blog-footer">
             <p>Portfolio template built for <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by
-                <a href="https://twitter.com/LWBoudreau">lynnboudreau.com</a>.</p>
+                <a href="https://twitter.com/LWBoudreau">lynnboudreau.com</a>
+            </p>
             <p>
                 <a href="https://lynnboudreau.github.io/Portfolio/">Back to Landing Page</a>
             </p>
