--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="image-section row">
               <div class="col-4">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/6/66/An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg"
+                  src="https://drive.google.com/file/d/0B6ifPe3puys4YnRoZEdEZUpfOXM/view?usp=sharing"
                   alt="" class="col-12">
               </div>
               <div class="col-8">
