added html tags, css

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="index.html" id="logo">Lynn Boudreau</a>
+      <h1>Lynn Boudreau</h1>
+      <a class="navbar-brand" href="index.html" id="logo"></a>
+      <a href="https://dev.to/lynnboudreau">
+        <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Lynn  Boudreau's DEV Profile" height="30" width="30">
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
@@ -53,12 +57,9 @@
               </div>
               <div class="col-8">
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, dolores itaque mollitia cupiditate
-                  similique omnis nulla totam inventore odit modi, sunt accusamus, dolore repellat earum. Iusto,
-                  laudantium. In, iste distinctio! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor,
-                  dolores itaque mollitia cupiditate
-                  similique omnis nulla totam inventore odit modi, sunt accusamus, dolore repellat earum. Iusto,
-                  laudantium. In, iste distinctio!
+                  Full Stack Web Developer with extensive manufacturing experience. Student of the University of New Hampshire Trilogy Coding Boot Camp with skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, Node.js, Express.js, Mysql, Mongo DB and React.js. Degree in Environmental Science from Manchester Community College. My goal as a developer is to create intuitive user experiences while developing responsive visually stunning websites.
+
+My background in manufacturing has given me invaluable experience working in a deadline-oriented team environment and putting the needs of the customer first.
                 </p>
                 <br>
                 <p>
@@ -86,6 +87,7 @@
       </div>
     </div>
   </div>
+  <br>
   <div id="footer">
     <footer class="blog-footer">
       <p>Portfolio template built for <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by <a
