--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,11 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="index.html" id="logo">Lynn Boudreau</a>
+            <h1>Lynn Boudreau</h1>
+            <a class="navbar-brand" href="index.html" id="logo"></a>
+            <a href="https://dev.to/lynnboudreau">
+                <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Lynn  Boudreau's DEV Profile" height="30" width="30">
+              </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,20 +44,20 @@
 
     <main class="container">
         <section class="row">
-            <div class="col-md-8">
+            <div class="col-lg-12">
                 <form class="block form-horizontal">
-                    <h1 class="block-header">Contact</h1>
+                    <h3 class="block-header">Contact</h3>
                     <hr />
                     <div class="form-group">
                         <label for="name" class="col-sm-2 control-label">Name</label>
                         <div class="col-sm-10">
-                            <input type="Password" class="form-control" id="name" placeholder="Name">
+                            <input type="Name" class="form-control" id="name" placeholder="Name">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="email" class="col-sm-2 control-label">Email</label>
+                        <label for="email" class="col-sm-2 control-label">e-mail</label>
                         <div class="col-sm-10">
-                            <input type="Email" class="form-control" id="Email" placeholder="Email">
+                            <input type="e-mail" class="form-control" id="e-mail" placeholder="e-mail">
                         </div>
                     </div>
                     <div class="form-group">
@@ -71,7 +75,8 @@
     <div id="footer">
         <footer class="blog-footer">
             <p>Portfolio template built for <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by
-                <a href="https://twitter.com/LWBoudreau">lynnboudreau.com</a>
+                <a href="https://twitter.com/LWBoudreau"></a>
+                <a href="https://twitter.com/LWBoudreau?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @LWBoudreau</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </p>
             <p>
                 <a href="https://lynnboudreau.github.io/Portfolio/">Back to Landing Page</a>
