--- a/portfolio.html
+++ b/portfolio.html
@@ -1,103 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>Portfolio</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/styles.css" media="screen">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./assets/css/styles.css" media="screen" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="index.html" id="logo">Lynn Boudreau</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">About</a>
-                    </li>
-                </ul>
-            </div>
-
+      <div class="container">
+        <a class="navbar-brand" href="index.html" id="logo">Lynn Boudreau</a>
+        <a href="https://dev.to/lynnboudreau">
+          <img
+            src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg"
+            alt="Lynn  Boudreau's DEV Profile"
+            height="30"
+            width="30"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">About</a>
+            </li>
+          </ul>
         </div>
-
+      </div>
     </nav>
 
     <div class="container">
-        <main class="row">
-            <div class="col-md-12">
-                <article class="block">
-                    <h1 class="block-header">Portfolio</h1>
-                    <hr />
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-6 col-md-12 col-lg-6">
-                                <img class="img-fluid port-image" src="https://via.placeholder.com/400x400" alt="">
-                            </div>
-                            <div class="col-sm-6 col-md-12 col-lg-6">
-                                <img class="img-fluid port-image" src="https://via.placeholder.com/400x400" alt="">
-                            </div>
-                        </div>
-                        <br />
-                        <div class="row">
-                            <div class="col-sm-6 col-md-12 col-lg-6">
-                                <img class="img-fluid port-image" src="https://via.placeholder.com/400x400" alt="">
-                            </div>
-                            <div class="col-sm-6 col-md-12 col-lg-6">
-                                <img class="img-fluid port-image" src="https://via.placeholder.com/400x400" alt="">
-                            </div>
-                        </div>
-                        <br />
-                        <div class="row">
-                            <div class="col-sm-6 col-md-12 col-lg-6">
-                                <img class="img-fluid port-image" src="https://via.placeholder.com/400x400" alt="">
-                            </div>
-                            <div class="col-sm-6 col-md-12 col-lg-6">
-                                <img class="img-fluid port-image" src="https://via.placeholder.com/400x400" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </article>
+      <main class="row">
+        <div class="col-md-12">
+          <article class="block">
+            <h1 class="block-header">Portfolio</h1>
+            <hr />
+            <div class="container">
+              <div class="row">
+                <div class="col-sm-6 col-md-12 col-lg-6">
+                  <img
+                    class="img-fluid port-image"
+                    src="https://via.placeholder.com/400x400"
+                    alt=""
+                  />
+                </div>
+                <div class="col-sm-6 col-md-12 col-lg-6">
+                  <img
+                    class="img-fluid port-image"
+                    src="https://via.placeholder.com/400x400"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <br />
+              <div class="row">
+                <div class="col-sm-6 col-md-12 col-lg-6">
+                  <img
+                    class="img-fluid port-image"
+                    src="https://via.placeholder.com/400x400"
+                    alt=""
+                  />
+                </div>
+                <div class="col-sm-6 col-md-12 col-lg-6">
+                  <img
+                    class="img-fluid port-image"
+                    src="https://via.placeholder.com/400x400"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <br />
+              <div class="row">
+                <div class="col-sm-6 col-md-12 col-lg-6">
+                  <img
+                    class="img-fluid port-image"
+                    src="https://via.placeholder.com/400x400"
+                    alt=""
+                  />
+                </div>
+                <div class="col-sm-6 col-md-12 col-lg-6">
+                  <img
+                    class="img-fluid port-image"
+                    src="https://via.placeholder.com/400x400"
+                    alt=""
+                  />
+                </div>
+              </div>
             </div>
-        </main>
+          </article>
+        </div>
+      </main>
     </div>
     <br />
     <div id="footer">
-        <footer class="blog-footer">
-            <p>Portfolio template built for <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by
-                <a href="https://twitter.com/LWBoudreau">lynnboudreau.com</a>.</p>
-            <p>
-                <a href="https://lynnboudreau.github.io/Portfolio/">Back to Landing Page</a>
-            </p>
-        </footer>
+      <footer class="blog-footer">
+        <p>
+          Portfolio template built for
+          <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by
+          <a href="https://twitter.com/LWBoudreau">lynnboudreau.com</a>.
+        </p>
+        <p>
+          <a href="https://lynnboudreau.github.io/Portfolio/"
+            >Back to Landing Page</a
+          >
+        </p>
+      </footer>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
