--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <div class="image-section row">
               <div class="col-4">
                 <img
-                  src="https://drive.google.com/file/d/0B6ifPe3puys4YnRoZEdEZUpfOXM/view?usp=sharing"
-                  alt="" class="col-12">
+                  src="assets/Images/Amber's Wedding 10-14-11.jpg"
+                  alt="Photo of Lynn Boudreau" class="col-12">
               </div>
               <div class="col-8">
                 <br>
