--- a/portfolio.html
+++ b/portfolio.html
@@ -66,15 +66,15 @@
                 <div class="col-sm-6 col-md-12 col-lg-6">
                   <img
                     class="img-fluid port-image"
-                    src="https://via.placeholder.com/400x400"
-                    alt=""
+                    src="assets/Images/Password_Generator_ May 25, 2020 12_52 PM.gif"
+                    alt="Password Generator app in use"
                   />
                 </div>
                 <div class="col-sm-6 col-md-12 col-lg-6">
                   <img
                     class="img-fluid port-image"
-                    src="https://via.placeholder.com/400x400"
-                    alt=""
+                    src="assets/Images/Code_Quiz_ May 25, 2020 12_59 PM.gif"
+                    alt="Password Generator app in use"
                   />
                 </div>
               </div>
