added additional project gifs and links

--- a/contact.html
+++ b/contact.html
@@ -73,15 +73,13 @@
     </main>
     <br>
     <div id="footer">
-        <footer class="blog-footer">
-            <p>Portfolio template built for <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by
-                <a href="https://twitter.com/LWBoudreau"></a>
-                <a href="https://twitter.com/LWBoudreau?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @LWBoudreau</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </p>
-            <p>
-                <a href="https://lynnboudreau.github.io/Portfolio/">Back to Landing Page</a>
-            </p>
-        </footer>
+        <div id="footer">
+            <footer class="blog-footer">
+              <p>Portfolio template built for <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by <a
+                  href="https://lynnboudreau.github.io/prework-about-me/">lynnboudreau.com</a>.</p>
+              </p>
+            </footer>
+          </div>
     </div>
 
     </div>
