--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <div class="col-8">
                 <br>
                 <p>
-                  Full Stack Web Developer with extensive manufacturing experience. Student of the University of New Hampshire Trilogy Coding Boot Camp with skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, Ajax, JSON, Node.js, Express.js, MySQL, Mongo DB and React.js.
+                  Full Stack Web Developer with extensive Manufacturing and Electro-Mechanical experience. Student of the University of New Hampshire Trilogy Coding Boot Camp with skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, Ajax, JSON, Node.js, Express.js, MySQL, Mongo DB and React.js.
                 </p>
                 <p>
                   My goal as a developer is to create intuitive user experiences while developing responsive visually stunning websites.  My background in manufacturing has given me invaluable experience working in a deadline-oriented team environment and putting the needs of the customer first.
@@ -83,7 +83,7 @@
   <div id="footer">
     <footer class="blog-footer">
       <p>Portfolio template built for <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by <a
-          href="https://twitter.com/LWBoudreau">lynnboudreau.com</a>.</p>
+          href="https://lynnboudreau.github.io/prework-about-me/">lynnboudreau.com</a>.</p>
       </p>
     </footer>
   </div>
@@ -99,6 +99,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+    
+
 </body>
 
 </html>
