added more gifs

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,6 +66,23 @@
                 <div class="col-sm-6 col-md-12 col-lg-6">
                   <img
                     class="img-fluid port-image"
+                    src="assets/Images/Prework_About_Me_ May 25, 2020 3_16 PM.gif"
+                    alt="About Me app deployed"
+                  />
+                </div>
+                <div class="col-sm-6 col-md-12 col-lg-6">
+                  <img
+                    class="img-fluid port-image"
+                    src="assets/Images/Portfolio_ May 25, 2020 3_24 PM.gif"
+                    alt="Portfolio app deployed"
+                  />
+                </div>
+              </div>
+              <br />
+              <div class="row">
+                <div class="col-sm-6 col-md-12 col-lg-6">
+                  <img
+                    class="img-fluid port-image"
                     src="assets/Images/Password_Generator_ May 25, 2020 12_52 PM.gif"
                     alt="Password Generator app deployed"
                   />
@@ -73,42 +90,24 @@
                 <div class="col-sm-6 col-md-12 col-lg-6">
                   <img
                     class="img-fluid port-image"
-                    src="assets/Images/Code_Quiz_ May 25, 2020 12_59 PM.gif"
-                    alt="Password Generator app deployed"
+                    src="assets/Images/Code_Refactoring_May 25, 2020 2_26 PM.gif"
+                    alt="Code Refactoring app deployed"
                   />
+                </div>
+                <div class="col-sm-6 col-md-12 col-lg-6">
+                  <img class="img-fluid port-image" src="" alt="" />
                 </div>
               </div>
               <br />
               <div class="row">
                 <div class="col-sm-6 col-md-12 col-lg-6">
-                  <img
-                    class="img-fluid port-image"
-                    src="assets/Images/Booze_&Brews_ May 25, 2020 1_56 PM.gif"
-                    alt="Booze and Brews app deployed"
-                  />
+                  <img class="img-fluid port-image" src="" alt="" />
                 </div>
                 <div class="col-sm-6 col-md-12 col-lg-6">
                   <img
                     class="img-fluid port-image"
-                    src="https://via.placeholder.com/400x400"
-                    alt=""
-                  />
-                </div>
-              </div>
-              <br />
-              <div class="row">
-                <div class="col-sm-6 col-md-12 col-lg-6">
-                  <img
-                    class="img-fluid port-image"
-                    src="https://via.placeholder.com/400x400"
-                    alt=""
-                  />
-                </div>
-                <div class="col-sm-6 col-md-12 col-lg-6">
-                  <img
-                    class="img-fluid port-image"
-                    src="https://via.placeholder.com/400x400"
-                    alt=""
+                    src="assets/Images/Booze_&_Brews_ May 25, 2020 1_56 PM.gif"
+                    alt="Booze & Brews app deployed"
                   />
                 </div>
               </div>
