finally last gif

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,15 +67,35 @@
                   <img
                     class="img-fluid port-image"
                     src="assets/Images/Prework_About_Me_ May 25, 2020 3_16 PM.gif"
-                    alt="About Me app deployed"
+                    alt="About Me deployed"
                   />
                 </div>
                 <div class="col-sm-6 col-md-12 col-lg-6">
                   <img
                     class="img-fluid port-image"
                     src="assets/Images/Portfolio_ May 25, 2020 3_24 PM.gif"
-                    alt="Portfolio app deployed"
+                    alt="Portfolio deployed"
                   />
+                </div>
+              </div>
+              <br />
+              <div class="row">
+                <div class="col-sm-6 col-md-12 col-lg-6">
+                  <img
+                    class="img-fluid port-image"
+                    src="assets/Images/Booze_&_Brews_ May 25, 2020 1_56 PM.gif"
+                    alt="Booze & Brews deployed"
+                  />
+                </div>
+                <div class="col-sm-6 col-md-12 col-lg-6">
+                  <img
+                    class="img-fluid port-image"
+                    src="assets/Images/Code_Refactoring_May 25, 2020 2_26 PM.gif"
+                    alt="Code Refactoring deployed"
+                  />
+                </div>
+                <div class="col-sm-6 col-md-12 col-lg-6">
+                  <img class="img-fluid port-image" src="" alt="" />
                 </div>
               </div>
               <br />
@@ -84,30 +104,14 @@
                   <img
                     class="img-fluid port-image"
                     src="assets/Images/Password_Generator_ May 25, 2020 12_52 PM.gif"
-                    alt="Password Generator app deployed"
+                    alt="Password Generator deployed"
                   />
                 </div>
                 <div class="col-sm-6 col-md-12 col-lg-6">
                   <img
                     class="img-fluid port-image"
-                    src="assets/Images/Code_Refactoring_May 25, 2020 2_26 PM.gif"
-                    alt="Code Refactoring app deployed"
-                  />
-                </div>
-                <div class="col-sm-6 col-md-12 col-lg-6">
-                  <img class="img-fluid port-image" src="" alt="" />
-                </div>
-              </div>
-              <br />
-              <div class="row">
-                <div class="col-sm-6 col-md-12 col-lg-6">
-                  <img class="img-fluid port-image" src="" alt="" />
-                </div>
-                <div class="col-sm-6 col-md-12 col-lg-6">
-                  <img
-                    class="img-fluid port-image"
-                    src="assets/Images/Booze_&_Brews_ May 25, 2020 1_56 PM.gif"
-                    alt="Booze & Brews app deployed"
+                    src="assets/Images/Code_Quiz_ May 25, 2020 12_59 PM.gif"
+                    alt="Code Quiz deployed"
                   />
                 </div>
               </div>
