--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="index.html">About</a>
           </li>
         </ul>
@@ -64,7 +64,7 @@
                   My goal as a developer is to create intuitive user experiences while developing responsive visually stunning websites.  My background in manufacturing has given me invaluable experience working in a deadline-oriented team environment and putting the needs of the customer first.
                 </p>
                 <p>
-                  Certificate in Modern Office Practices from Wilcox Regional Vo-Tech School.  Associates Degree in Environmental Science from Manchester Community College.  Certificate in Machine Tool Technology from River Valley Community College.  Certificate in Full-Stack Web Development from UNH Coding Bootcamp, <strong>presently enrolled</strong>.
+                  Certificate in Full-Stack Web Development from UNH Coding Bootcamp, <strong>presently enrolled</strong>.  Certificate in Machine Tool Technology from River Valley Community College.  A.S. Degree, Environmental Sciences, Middlesex Community College.  Certificate in Modern Office Practices from Wilcox Regional Vo-Tech School.    
                 </p>
               </div>
             </div>
