--- a/portfolio.html
+++ b/portfolio.html
@@ -124,9 +124,9 @@
     <div id="footer">
       <footer class="blog-footer">
         <p>
-          Portfolio template built for
-          <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by
-          <a href="https://twitter.com/LWBoudreau">lynnboudreau.com</a>.
+          <a href="https://lynnboudreau.github.io/prework-about-me/"
+            >Made with ❤️️ by Lynn Boudreau</a
+          >
         </p>
         <p>
           <a href="https://lynnboudreau.github.io/Portfolio/"
