--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             <hr>
             <div class="image-section row">
               <div class="col-4">
-                <img src="/assets/Images/IMG_20200710_160436_905.jpg" alt="Photo of Lynn Boudreau" class="col-12">
+                <img src="/assets/Images/IMG_20200710_160436_905.400x400.jpg" alt="Photo of Lynn Boudreau"
+                  class="col-12">
               </div>
               <div class="col-8">
                 <br>
