--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <br>
   <div id="footer">
     <footer class="blog-footer">
-      <p>Portfolio template built for <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by <a
+      <p>Portfolio template built in <a href="https://bootcamp.unh.edu/">UNH Coding Bootcamp</a> by <a
           href="https://lynnboudreau.github.io/prework-about-me/">lynnboudreau.com</a>.</p>
       </p>
     </footer>
